Fix FAQ heading alignment
Involved changing the line-height of h2 elements to
1.1. This is unfortunately a global change but hopefully
one we'll catch if it causes any trouble — luckily
it's only a handful of pixels. Still.

--- a/organicity/_src/styles/_fonts.scss
+++ b/organicity/_src/styles/_fonts.scss
@@ -19,7 +19,7 @@ h2 {
   font-family: $text__family--sans-serif;
   color: $color__pink;
   @include rem-fallback(font-size, $text__large);
-  @include rem-fallback(line-height, 46);
+  line-height: 1.1;
 }
 
 h3 {
